# rez-vscode

./: CMakeLists.txt  README.md  install.sh  package.py
